# where-space

./: .env  .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
src/app/: globals.css  layout.tsx  model.tsx  page.tsx
src/app/event/: page.tsx
src/app/list-events/: add-booking-modal.tsx  add-event-modal.tsx  page.tsx
src/app/list-peers/: page.tsx
src/app/login/: page.tsx
src/app/spaces/: SpaceTypeSelect.tsx  add-booking-modal.tsx  page.tsx
src/app/utils/: axios-instance.ts
src/component/: AppBar.tsx  SearchBar.tsx
src/components/: AppBar.tsx  SearchBar.tsx  SpaceItemCard.tsx
src/example-data/: exampleLocations.ts
src/model/: Space.ts
src/wherespace/wherespace/: asgi.py  settings.py  urls.py
wherespace-backend/: manage.py
wherespace-backend/backend/: routing.py
wherespace-backend/backend/consumers/: __init__.py  chat_consumer.py  objective_consumer.py  utils.py
wherespace-backend/backend/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_id_and_more.py  0002_space_description_space_image_url_space_rating_and_more.py  0002_user_interests.py  0003_alter_booking_host.py  0003_alter_user_privacy.py  0003_remove_space_rating_rating.py  0004_eventobjective.py  0004_remove_event_space_event_booking_event_end_time_and_more.py  0005_alter_eventobjective_event.py  0005_remove_booking_attendees_event_attendees.py  0006_event_host.py  0006_event_summary.py  0011_space_status.py  (+11 more)
wherespace-backend/wherespace/: asgi.py  settings.py  urls.py
wherespace/wherespace/: settings.py  wsgi.py
(+29 files in other folders)
